@@ -1,34 +1,26 @@
+ARG EXIST_VERSION=5.4.1
+
 # START STAGE 1
 FROM openjdk:8-jdk-slim as builder
 
 USER root
 
-ENV NODE_MAJOR 20
-ENV ANT_VERSION 1.10.14
+ENV ANT_VERSION 1.10.12
 ENV ANT_HOME /etc/ant-${ANT_VERSION}
 
 WORKDIR /tmp
 
 RUN apt-get update && apt-get install -y \
     git \
-    curl \
-    ca-certificates \
-    gnupg
+    curl
 
 # PATCH CRH 13/02/2024
 # Add LaTeX
 # Install LaTeX and necessary packages
 RUN apt-get update && \
     apt-get install -y texlive texlive-latex-extra
-# END PATCH
-
-RUN mkdir -p /etc/apt/keyrings && \
-    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
-    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_${NODE_MAJOR}.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list && \
-    apt-get update && \
-    apt-get install nodejs -y
-
-RUN curl -L -o apache-ant-${ANT_VERSION}-bin.tar.gz https://downloads.apache.org/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz \
+    
+RUN curl -L -o apache-ant-${ANT_VERSION}-bin.tar.gz http://www.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz \
     && mkdir ant-${ANT_VERSION} \
     && tar -zxvf apache-ant-${ANT_VERSION}-bin.tar.gz \
     && mv apache-ant-${ANT_VERSION} ${ANT_HOME} \
@@ -39,56 +31,58 @@ RUN curl -L -o apache-ant-${ANT_VERSION}-bin.tar.gz https://downloads.apache.org
 
 ENV PATH ${PATH}:${ANT_HOME}/bin
 
-# RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
-#     && apt-get install -y nodejs \
-#     && curl -L https://www.npmjs.com/install.sh | sh
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - \
+    && apt-get install -y nodejs \
+    && curl -L https://www.npmjs.com/install.sh | sh
 
 FROM builder as tei
 
-# TODO(DP): Demo App Versions need updating
-ARG TEMPLATING_VERSION=1.1.0
-ARG PUBLISHER_LIB_VERSION=4.0.0
-ARG ROUTER_VERSION=1.8.1
-ARG SHAKESPEARE_VERSION=2.0.2
-ARG VANGOGH_VERSION=2.0.0
+ARG TEMPLATING_VERSION=v1.0.0
+ARG PUBLISHER_LIB_VERSION=v2.9.0
+ARG OAS_ROUTER_VERSION=v0.5.1
+ARG PUBLISHER_VERSION=release/7.1.1
+ARG SHAKESPEARE_VERSION=1.1.2
+ARG VANGOGH_VERSION=1.0.6
 
 # add key
 RUN  mkdir -p ~/.ssh && ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+
+RUN git clone https://github.com/eXist-db/templating.git \
+    && cd templating \
+    && git checkout ${TEMPLATING_VERSION} \
+    && npm start
+
+# Build tei-publisher-lib
+RUN  git clone https://github.com/eeditiones/tei-publisher-lib.git \
+    && cd tei-publisher-lib \
+    && git checkout ${PUBLISHER_LIB_VERSION} \
+    && ant
+
+RUN  git clone https://github.com/eeditiones/roaster.git \
+    && cd roaster \
+    && git checkout ${OAS_ROUTER_VERSION} \
+    && ant
 
 # Build shakespeare
 RUN  git clone https://github.com/eeditiones/shakespeare.git \
     && cd shakespeare \
     && git checkout ${SHAKESPEARE_VERSION} \
-    && sed -i 's/$config:webcomponents :=.*;/$config:webcomponents := "local";/' modules/config.xqm \
-    && ant xar-local
+    && ant
 
 # Build vangogh
 RUN  git clone https://github.com/eeditiones/vangogh.git \
     && cd vangogh \
     && git checkout ${VANGOGH_VERSION} \
-    && sed -i 's/$config:webcomponents :=.*;/$config:webcomponents := "local";/' modules/config.xqm \
-    && ant xar-local
-
-# Build tei-publisher-lib
-RUN if [ "${PUBLISHER_LIB_VERSION}" = "master" ]; then \
-    git clone https://github.com/eeditiones/tei-publisher-lib.git \
-    && cd tei-publisher-lib \
-    && ant \
-    && cp build/*.xar /tmp; \
-    else \
-    curl -L -o /tmp/tei-publisher-lib-${PUBLISHER_LIB_VERSION}.xar https://exist-db.org/exist/apps/public-repo/public/tei-publisher-lib-${PUBLISHER_LIB_VERSION}.xar; \
-    fi
+    && ant
 
 # Build tei-publisher-app
-COPY . tei-publisher-app/
-RUN  cd tei-publisher-app \
-    && sed -i 's/$config:webcomponents :=.*;/$config:webcomponents := "local";/' modules/config.xqm \
-    && ant xar-local
+RUN  git clone https://github.com/eeditiones/tei-publisher-app.git \
+    && cd tei-publisher-app \
+    && echo Checking out ${PUBLISHER_VERSION} \
+    && git checkout ${PUBLISHER_VERSION} \
+    && ant
 
-RUN curl -L -o /tmp/roaster-${ROUTER_VERSION}.xar http://exist-db.org/exist/apps/public-repo/public/roaster-${ROUTER_VERSION}.xar
-RUN curl -L -o /tmp/templating-${TEMPLATING_VERSION}.xar http://exist-db.org/exist/apps/public-repo/public/templating-${TEMPLATING_VERSION}.xar
-
-FROM duncdrum/existdb:6.2.0-debug-j8
+FROM existdb/existdb:${EXIST_VERSION}
 
 # PATCH CRH 13/02/2024
 # Add LaTeX
@@ -103,22 +97,14 @@ COPY --from=builder /usr/share/tex-common /usr/share/tex-common
 COPY --from=builder /usr/share/texmf /usr/share/texmf
 # END PATCH
 
+COPY --from=tei /tmp/templating/templating-*.xar /exist/autodeploy
+COPY --from=tei /tmp/tei-publisher-lib/build/*.xar /exist/autodeploy
+COPY --from=tei /tmp/roaster/build/*.xar /exist/autodeploy
+COPY --from=tei /tmp/tei-publisher-app/build/*.xar /exist/autodeploy
+COPY --from=tei /tmp/shakespeare/build/*.xar /exist/autodeploy
+COPY --from=tei /tmp/vangogh/build/*.xar /exist/autodeploy
 
-COPY --from=tei /tmp/tei-publisher-app/build/*.xar /exist/autodeploy/
-COPY --from=tei /tmp/shakespeare/build/*.xar /exist/autodeploy/
-COPY --from=tei /tmp/vangogh/build/*.xar /exist/autodeploy/
-COPY --from=tei /tmp/*.xar /exist/autodeploy/
-
-WORKDIR /exist
-
-# ARG ADMIN_PASS=none
-
-ARG HTTP_PORT=8080
-ARG HTTPS_PORT=8443
-
-ARG NER_ENDPOINT=http://localhost:8001
-ARG CONTEXT_PATH=auto
-ARG PROXY_CACHING=false
+ENV DATA_DIR /exist-data
 
 ENV JAVA_TOOL_OPTIONS \
     -Dfile.encoding=UTF8 \
@@ -131,16 +117,16 @@ ENV JAVA_TOOL_OPTIONS \
     -Dexist.configurationFile=/exist/etc/conf.xml \
     -Djetty.home=/exist \
     -Dexist.jetty.config=/exist/etc/jetty/standard.enabled-jetty-configs \
-    -Dteipublisher.ner-endpoint=${NER_ENDPOINT} \
-    -Dteipublisher.context-path=${CONTEXT_PATH} \
-    -Dteipublisher.proxy-caching=${PROXY_CACHING} \
+    -XX:+UnlockExperimentalVMOptions \
+    -XX:+UseCGroupMemoryLimitForHeap \
     -XX:+UseG1GC \
     -XX:+UseStringDeduplication \
-    -XX:+UseContainerSupport \
-    -XX:MaxRAMPercentage=${JVM_MAX_RAM_PERCENTAGE:-75.0} \
-    -XX:+ExitOnOutOfMemoryError
+    -XX:MaxRAMFraction=1 \
+    -XX:+ExitOnOutOfMemoryError \
+    -Dorg.exist.db-connection.files=${DATA_DIR} \
+    -Dorg.exist.db-connection.recovery.journal-dir=${DATA_DIR}
 
-# pre-populate the database by launching it once and change default pw
-RUN [ "java", "org.exist.start.Main", "client", "--no-gui",  "-l", "-u", "admin", "-P", "" ]
-
-EXPOSE ${HTTP_PORT} ${HTTPS_PORT}
+# pre-populate the database by launching it once
+RUN [ "java", \
+    "org.exist.start.Main", "client", "-l", \
+    "--no-gui",  "--xpath", "system:get-version()" ]
